[gdb] Fix assertion failure for checkpoint delete 0

When doing "checkpoint delete 0" we run into an assertion failure:
...
+delete checkpoint 0
inferior.c:406: internal-error: find_inferior_pid: Assertion `pid != 0' failed.
...

Fix this by handling the "pptid == null_ptid" case in
delete_checkpoint_command.

Tested on x86_64-linux.

Approved-By: Kevin Buettner <kevinb@redhat.com>

PR gdb/31209
Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=31209